# AccuKnox-social-networking-application

./: .env.example  Dockerfile  Makefile  README.md  Social Networking AccuKnox.postman_collection.json  docker-compose.yml  pyproject.toml
app/: entrypoint.sh
app/app/: settings.py  urls.py
app/authentication/: models.py  serializers.py  urls.py  views.py
app/authentication/migrations/: 0001_initial.py
app/network/: models.py  serializers.py  throttles.py  urls.py  views.py
app/network/migrations/: 0001_initial.py
